# scholar

./: README.md  Spacefile  next.config.js  package.json  privacy.md  tailwind.config.js  terms.md
.github/workflows/: main.yml
api/: .gitignore  Pipfile  main.py  models.py  parse.py  requirements.txt  scrape.py
api_rust/: Cargo.toml  watch.toml
api_rust/src/: main.rs  parse.rs  scrape.rs
app/: HomeClient.tsx  globals.css  layout.tsx  page.tsx  sitemap.ts
app/api/scholarships/: route.ts
app/components/icons/: CheckIcon.tsx
app/privacy/: page.tsx
app/terms/: page.tsx
front/: next.config.js  package.json
front/public/: ads.txt
front/src/app/: layout.tsx  page.tsx
front/src/pages/: _app.tsx  _document.tsx  index.tsx  privacy.tsx  terms.tsx
hooks/: useDisclosure.ts
lib/: scholarships.ts
public/: robots.txt
public/favicons/: site.webmanifest
src/pages/: _app.tsx  _document.tsx  index.tsx  privacy.tsx  terms.tsx
src/pages/api/: scholarships.ts
